Add language info for item group & reorganize

--- a/src/main/resources/assets/infraredstone/lang/en_us.json
+++ b/src/main/resources/assets/infraredstone/lang/en_us.json
@@ -26,5 +26,6 @@
 
   "container.infraredstone.oscillator": "Oscillator",
 
-  "itemGroup.infraredstone.infra_redstone_tab": "Infra-Redstone"
+  "itemGroup.infraredstone.infra_redstone_tab": "Infra-Redstone",
+  "itemGroup.infraredstone.in_red_group": "Infra-Redstone"
 }
